# alvox

./: .gitignore  .gitmodules  Cargo.toml  README.md
core/: Cargo.toml  render_chunk.md
core/examples/: clap.rs  egui.rs  instances.rs  test.rs  world_gen.rs
core/examples/baby_q/: baby_q.rs  camera.rs  light.rs  main.rs  shadow.rs  state.rs
core/examples/baby_q/shaders/: shader.wgsl  shadow.wgsl
core/examples/height_map/: main.rs  state.rs
core/examples/height_map/shaders/: heightmap.wgsl
core/src/: block.rs  camera.rs  chunk.rs  instance.rs  lib.rs  light.rs  main.rs  model.rs  render.rs  resources.rs  shadow.rs  state-old.rs  state.rs  texture.rs  utils.rs  vertex.rs  voxel.rs  world.rs
core/src/chunk/: traits.rs
core/src/data/: camera.rs  light.rs  mod.rs  shadow.rs  sky.rs
core/src/shaders/: shader.wgsl  shadow.wgsl  sky.wgsl
core/src/shaders/old/: light.wgsl  shader copy.wgsl  shader.wgsl  shadow.wgsl
