[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.27"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13.1"
cfg-if = "1"
pollster = "0.2"
bytemuck = { version = "1.9", features = ["derive"] }
cgmath = "0.18"
anyhow = "1.0"
tobj = { version = "3.2.1", features = ["async"] }
instant = "0.1"
wgpu_glyph = "0.17"
glob = "0.3.0"
rand = "0.8.4"
rand_chacha = "0.3.1"
clap = { version = "3.2", features = ["derive", "cargo"] }
lazy_static = "1.4.0"
futures-intrusive = "0.4"
glam = "0.21"
ddsfile = "0.5.1"
num-traits = "0.2"
num-derive = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
noise = { version = "0.7", default-features = false }

egui-wgpu = "0.19"
egui = "0.19"
egui-winit = "0.19"
egui_demo_lib = "0.19"
egui_winit_platform = { version = "0.16", path = "../egui_winit_platform" }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "dds"]


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
